Closed
Bug 109808
Opened 24 years ago
Closed 24 years ago
* style overrides textarea style
Categories
(Core :: CSS Parsing and Computation, defect, P2)
Core
CSS Parsing and Computation
Tracking
()
VERIFIED
FIXED
mozilla0.9.7
People
(Reporter: pbaker, Assigned: dbaron)
References
Details
(Keywords: css1, regression, testcase)
Attachments
(2 files, 3 obsolete files)
When using a style sheet that contains a default * rule and also a textarea
rule, the * rule is used for textarea elements instead of the better matching
textarea rule.
Steps to reproduce:
1. create a style sheet with a * and differing textarea rule.
2. link to this stylesheet in an html document.
3. include a form that has a <textarea></textarea> form element.
Actual results:
The text contents of the <textarea> box will be styled using the * rule.
Expected results:
The text contents of the <textarea> box will be styled using the textarea rule.
Additional information:
This problem does not exist in Mozilla 0.9.5 (2001101117). It does not exist in
Mozilla Build 2001110503 on at least Windows 2000. It does not exist in Internet
Explorer 5.50.4807.2300. It does not exist in Konqueror 2.1.1.
This problem started appearing in Mozilla Build 2001110603. It still exists in
build 2001111203.
I will attach a test case.
Also, I consider this to be a blocker for 0.9.6 because if 0.9.6 releases with
this problem, it will be unusable to me and I will have to continue using 0.9.5.
| Reporter | ||
Comment 1•24 years ago
|
||
save this as test.css
| Reporter | ||
Comment 2•24 years ago
|
||
save as bug_in_stylesheets.html in the same directory as test.css.
| Reporter | ||
Updated•24 years ago
|
Target Milestone: --- → mozilla0.9.6
Attachment #57531 -
Attachment mime type: text/plain → text/css
Comment 4•24 years ago
|
||
Attachment #57531 -
Attachment is obsolete: true
Attachment #57532 -
Attachment is obsolete: true
Attachment #57534 -
Attachment is obsolete: true
Comment 5•24 years ago
|
||
Comment 6•24 years ago
|
||
It looks like both "textarea > div" and "*" will match the anonymous div in the
textarea. This is not good... :)
But it's also not a blocker. Downgrading to major (please read the severity
descriptions).
Severity: blocker → major
Status: UNCONFIRMED → NEW
Ever confirmed: true
Keywords: css1
OS: Windows 2000 → All
Hardware: PC → All
| Reporter | ||
Comment 7•24 years ago
|
||
read them now, my bad. thought blocker meant it blocked a release. :-/
| Assignee | ||
Comment 8•24 years ago
|
||
This is because textareas contain an "anonymous" DIV internally that can be
styled by the style rules in the page. XBL form controls would solve this since
we'd have the option of cutting off style. For now, that's a bit difficult,
although it could be done. Reassigning to HTML Form Controls.
Assignee: dbaron → rods
Component: Style System → HTML Form Controls
QA Contact: ian → madhur
Updated•24 years ago
|
Target Milestone: mozilla0.9.6 → mozilla0.9.7
| Reporter | ||
Comment 9•24 years ago
|
||
It disappoints me that the target release for fixing this bug has been pushed
back to 0.9.7 considering that it does not exist in 0.9.5. I suppose that's what
I get for waiting 5 days to report it. I guess I'll just have to hope it some
how makes it into 0.9.6.
The problem still exists of course in the 2001111411 0.9.6 build.
| Assignee | ||
Comment 10•24 years ago
|
||
Checkins during that time period were:
http://bonsai.mozilla.org/cvsquery.cgi?treeid=default&module=MozillaTinderboxAll&branch=HEAD&branchtype=match&dir=&file=&filetype=match&who=&whotype=match&sortby=Date&hours=2&date=explicit&mindate=2001-11-05+00%3A00&maxdate=2001-11-06+08%3A00&cvsroot=%2Fcvsroot
Could fantasai's changes have caused this?
What prevented it from happening in the past, anyway?
Comment 11•24 years ago
|
||
> Could fantasai's changes have caused this?
Apparently so--I built 11-04 and then built again with 43220's patch. The
<textarea>'s text is sans-serif with the patch.
Keywords: regression
| Reporter | ||
Comment 12•24 years ago
|
||
Problem still exists in 0.9.6 (build 2001112009) on Windows 2000. :~( I'll have
to stick with 0.9.5 until this gets fixed in a nightly.
| Assignee | ||
Comment 13•24 years ago
|
||
*** Bug 111239 has been marked as a duplicate of this bug. ***
Comment 14•24 years ago
|
||
'Twas a copy error. I should've checked that more carefully..
nsStyleSet.cpp - in StyleSetImpl::FileRules -
- if (mDocRuleProcessors) {
+ if (mDocRuleProcessors && useRuleProcessors) {
Reassigning to Style System.
Do you need a formal patch?
Assignee: rods → dbaron
Component: HTML Form Controls → Style System
QA Contact: madhur → ian
| Assignee | ||
Comment 15•24 years ago
|
||
r=dbaron
| Assignee | ||
Updated•24 years ago
|
Priority: -- → P2
Comment 16•24 years ago
|
||
hyatt@netscape.com wrote: sr=hyatt
dbaron, will you check in the fix?
| Assignee | ||
Comment 17•24 years ago
|
||
*** Bug 112148 has been marked as a duplicate of this bug. ***
Comment 18•24 years ago
|
||
Is this also what is causing the weird scrollbar styling behavior in bug 109087?
Here is the URL of the page that is looks weird in Mozilla (hint: try making
mozilla horizontally thinner and look at the bottom scrollbar):
http://bugzilla.mozilla.org/attachment.cgi?id=18503&action=view
Here is an image of what I see:
http://bugzilla.mozilla.org/attachment.cgi?id=57098&action=view
The offending style seems to be:
* { border: solid 1px blue; margin: 4px; padding: 4px; }
Maybe bug 109087 is a dup of this?
Jake
| Assignee | ||
Comment 19•24 years ago
|
||
Fix checked in 2001-11-27 20:54 PDT. Thanks for the patch, fantasai.
Status: NEW → RESOLVED
Closed: 24 years ago
Resolution: --- → FIXED
Comment 20•24 years ago
|
||
I guess I'll answer my own question. Yes! The fix for this does fix the weird
scrollbar behavior that I saw. Also, that bug was about part of the page not
displaying, originally. However, I've been able to see all text on the page
for quite a while. So, I don't think bug 109087 is a dup, but it may be a WFM
now.
Jake
Comment 21•24 years ago
|
||
*** Bug 113437 has been marked as a duplicate of this bug. ***
Comment 22•24 years ago
|
||
> Thanks for the patch, fantasai.
You're welcome, of course. I owed it to you.
BTW, if the 0.9.6 branch is still being used for anything significant, you might
want to change it there, too. The missing check seems to be causing problems for
people; we've had several duplicates and a newsgroup post in a short amount of
time.
Comment 23•24 years ago
|
||
*** Bug 114193 has been marked as a duplicate of this bug. ***
You need to log in
before you can comment on or make changes to this bug.
Description
•