Consider the result of |mStyleRuleSupplier->UseDocumentRules| in FileRules to prevent incorrect application of document rules to scrollbars and some form controls.  Patch from <fantasai@escape.com>.  r=dbaron  sr=hyatt  b=109808